Closed Bug 884931 Opened 11 years ago Closed 11 years ago

signmar should output the gecko version in its usage and/or --version

Categories

(Toolkit :: Application Update, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: dustin, Assigned: dustin)

Details

Attachments

(1 file)

MOZ_APP_VERSION is already available - if that's the thing to use, I can provide a patch for this.
Yes that sounds like a good idea, I'd recommend using MOZ_APP_VERSION because that's what it signs mars with by default. I can review it if you do such a patch. 

The command line parsing is really primitive in it, so to simplify things, please just print it in the print_usage function.
Version: x (MOZ_APP_VERSION)
Default channel ID: z (MAR_CHANNEL_ID)
Attached patch bug894931.diffSplinter Review
Yay, my first patch to m-c (so I'll need to figure out how/where to land it).
Assignee: nobody → dustin
Attachment #790468 - Flags: review?(netzen)
Comment on attachment 790468 [details] [diff] [review]
bug894931.diff

Review of attachment 790468 [details] [diff] [review]:
-----------------------------------------------------------------

Looks great, thanks for the patch.
Attachment #790468 - Flags: review?(netzen) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/67d3e9da1b4b

\o/

For future reference, please make sure you configure Hg to generate patches with the necessary commit information to make life easier on your humble sheriffs. Thanks :)
https://developer.mozilla.org/en-US/docs/Mercurial_FAQ#How_can_I_generate_a_patch_for_somebody_else_to_check-in_for_me.3F
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/67d3e9da1b4b
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: