Bug 884931 - signmar should output the gecko version in its usage and/or --version. r=bbondy